# spotify-personal-mcp

./: .env.example  .gitignore  .mcp.json  README.md  main.py  pyproject.toml
.claude/: settings.local.json
mcp_server/: spotify_server.py
